--- a/Bombones2025.Windows/Properties/Resources.resx
+++ b/Bombones2025.Windows/Properties/Resources.resx
@@ -139,6 +139,9 @@
   <data name="CLOSE40" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\CLOSE40.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="PASS100" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PASS100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="EDIT40" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\EDIT40.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -148,7 +151,7 @@
   <data name="DELETE40" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\DELETE40.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="PASS100" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\PASS100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="OFF30" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\OFF30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
